# Monorepo_with_Bazel

./: BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  main.go  versions.bzl
client/: BUILD.bazel  main.go
proto/dummy/v1/: BUILD.bazel  dummy.proto
server/: BUILD.bazel  main.go
